test_programs/compile_failure/noirc_frontend_tests_metaprogramming_does_not_fail_to_parse_macro_on_parser_warning/src/main.nr

    #[make_bar]
    pub unconstrained fn foo() {}

    comptime fn make_bar(_: FunctionDefinition) -> Quoted {
        quote {
            pub fn bar() {
                unsafe { 
                    foo();
                }
            }
        }
    }

    fn main() {
        bar()
    }
    